# scarecrow

./: .gitignore  README.md  pyproject.toml
data/: events.csv  users.csv
src/scarecrow/: config.py  langsmith_setup.py  repl.py  skills.py  tools.py  workspace.py
src/scarecrow/cli/: __init__.py  main.py
src/scarecrow/context/: __init__.py  assembler.py  schemas.py
src/scarecrow/llm/: __init__.py  loader.py  registry.py  schemas.py
src/scarecrow/router/: __init__.py  intent_router.py  schemas.py
src/scarecrow/runtime/: __init__.py  agent.py  decomposer.py  observation.py  planner.py  policy.py  state.py  task_state.py
src/scarecrow/skills/: __init__.py  builtins.py  loader.py  parser.py  registry.py  schemas.py
src/scarecrow/tools/: __init__.py  data_preview.py  python.py  registry.py  schemas.py  workspace.py
