[project]
name = "scarecrow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0",
    "langchain-core>=1.3.2",
    "langsmith>=0.7.37",
    "mem0ai>=2.0.1",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "rich>=15.0.0",
    "typer>=0.25.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
scarecrow = "scarecrow.cli.main:main"
